# ms-sbom-export

./: .mega-linter.yml  Dockerfile  README.md  export.css  index.yaml  main.py  openapi.json  pyproject.toml  requirements.in  requirements.txt  sbom.cyclonedx.json  sbom.spdx.json
.github/linters/: .stylelintrc.json
.github/workflows/: build-push-chart.yml  mega-linter.yml
chart/dh-ms-sbom/: Chart.yaml  values.yaml
chart/dh-ms-sbom/templates/: _helpers.tpl  deployment.yaml  service.yaml
chart/ms-sbom-export/: Chart.yaml  values.yaml
chart/ms-sbom-export/templates/: _helpers.tpl  deployment.yaml
