[tool.poetry]
name = "ms-sbom-export"
version = "0.1.0"
description = ""
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.12"
psycopg2-binary = "2.9.10"
pydantic = "2.11.7"
sqlalchemy = "2.0.41"
uvicorn = "0.34.3"
requests = "2.32.4"
numpy = "2.3.0"
pandas = "2.3.0"
weasyprint = "65.1"
starlette = "0.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
