[tool.poetry]
name = "ms-sbom-export"
version = "0.1.0"
description = ""
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.116.1"
psycopg2-binary = "2.9.10"
pydantic = "2.11.7"
sqlalchemy = "2.0.43"
uvicorn = "0.35.0"
requests = "2.32.4"
numpy = "2.3.2"
pandas = "2.3.1"
weasyprint = "66.0"
starlette = "0.47.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
